# AcOpenServer

./: .gitignore  AcOpenServer.sln  README.md
AcOpenServer/: AcOpenServer.csproj  GameType.cs  Program.cs
AcOpenServer/Binary/: BinaryBufferReader.cs  BinaryBufferWriter.cs
AcOpenServer/Crypto/: CWCCipher.cs  CWCKey.cs  CWCUdpClientCipher.cs  CWCUdpServerCipher.cs  ICipher.cs  RSACipher.cs  RSAKey.cs
AcOpenServer/Exceptions/: CipherException.cs  CwcCipherException.cs  FsdpReliableException.cs  SVFWMessageException.cs  SVFWPacketException.cs  TicketParseException.cs  UdpSendException.cs
AcOpenServer/Logging/: LogChannelFlags.cs  LogExtensions.cs  Logger.cs  ScopeLog.cs
AcOpenServer/Network/: RequestHandler.cs  ServerManager.cs
AcOpenServer/Tests/: CwcTest.cs  RsaTest.cs
AcOpenServer/Utilities/: ByteHelper.cs  HexHelper.cs  IPAddressHelper.cs  ProtobufHelper.cs  RandomHelper.cs
AesModesNet/: AesModesNet.csproj  AesNative.cs  CWC.cs  CwcException.cs  CwcNative.cs  Native.cs
BinaryMemory/Helpers/: ArrayHelper.cs  AssertHelper.cs  EncodingHelper.cs  StringHelper.cs
BinaryMemory/IO/: BinaryMemoryReader.cs  BinaryMemoryWriter.cs  BinarySpanReader.cs  BinaryStreamReader.cs  BinaryStreamWriter.cs  IBinaryReader.cs  IBinaryWriter.cs  SectorStream.cs  SubStream.cs
OpenSslNet/: App.config  CHANGES  COPYING  LICENSE  OpenSslNet.csproj  README.md
OpenSslNet/Core/: Native.cs  Version.cs
OpenSslNet/Crypto/: RSA.cs
native/: CMakeLists.txt
native/aes/: CMakeLists.txt
native/aes_modes/: CMakeLists.txt
native/tools/: native_generate_vs2022.bat
(+103 files in other folders)
